<resources>
    <string name="app_name">Byter Soundboard</string>
    <string name="aboba">Абоба</string>
    <string name="ny_blin">Ну блин</string>
    <string name="chto_ze_delat">Что же делать?</string>
    <string name="eli_pali">Ёлы-палы</string>
    <string name="bye">Пока</string>
    <string name="im_danila">Я Данила</string>
    <string name="hi">Привет</string>
    <string name="share">Поделиться</string>
    <string name="setOnCall">Установить на звонок</string>
    <string name="setOnSms">Установить на смс</string>
    <string name="setOn">Установить</string>
    <string name="chin_chopa">Чинь чопа</string>
    <string name="fu">Фу</string>
    <string name="razrivnaya">Разрывная</string>
    <string name="slabenko">Слабенько</string>
    <string name="tyazeliyslychay">Тяжелый случай</string>
    <string name="otdelniye_izv">Отдельные извинения</string>
    <string name="prosti_poriv">Прости, Порыв</string>

    <string name="info">info</string>
    <string name="information">
        Удерживайте кнопку для доп. функций.\nПри нажатии \"Поделиться\" звук сохраняется
        \в папку byter_sounds в корне, делайте с ним что хотите.\nКнопка со звездочкой слева
        - переход к избранному.</string>
    <string name="go_to_medic_not">Сходи к врачу, больной. Не поставлю я тебе Бутера на звонок, не проси.</string>
    <string name="share_toast">When the Byter is sus. (Мб, потом сделаю.)</string>
    <string name="byter_lager_gaming">Бутер лагерь гейминг</string>

    <string name="favorite">Добавить в избранное</string>
    <string name="unfavorite">Удалить из избранного</string>
    <string name="barFav">Избранное</string>
    <string name="barBass">Бассбуст</string>
    <string name="barSpeedUp">x2</string>
    <string name="BassOn">Бассбуст включен</string>
    <string name="BassOff">Бассбуст выключен</string>

    <string-array name="byter_sound_names">
        <item>Привет</item>
        <item>Пока</item>
        <item>Я Данила</item>
        <item>Абоба</item>
        <item>Бутер лагерь гейминг</item>
        <item>Чинь чопа</item>
        <item>Что же делать</item>
        <item>Ёлы палы</item>
        <item>Фу</item>
        <item>Ну блин</item>
        <item>Отдельные извинения</item>
        <item>Прости, Порыв</item>
        <item>Разрывная</item>
        <item>Слабенько</item>
        <item>Тяжелый случай</item>
        <item>Предновогоднее поздравление</item>
    </string-array>
</resources>